src/main/java/com/example/darts/errors/DartsmanNotFoundException.java
package com.example.darts.errors;

public class DartsmanNotFoundException extends RuntimeException {
}
